Name:          qwpx-stats
Version:       0.0.0
-- Category:      Network
Synopsis:      IRC log statistics generator
Maintainer:    Adam Michalik <adam@michalik.es>
Author:        Adam Michalik <adam@michalik.es>
Copyright:     (c) 2013 Adam Michalik
License:       GPL-3
Build-type:    Simple
Cabal-version: >= 1.6
Description:
  IRC log statistics generator



Executable qwpx-stats
  Build-depends:  base >= 4 && < 5, containers, lens,
                  monads-tf, transformers, bytestring, array, text,
                  optparse-applicative, time, directory, filepath,
                  regex-pcre, conduit
  Main-is:        Main.hs